# site-simpliglobal

./: build.sh  manage.py  pyproject.toml
apps/principal/: admin.py  models.py  urls.py  views.py
apps/principal/migrations/: 0001_initial.py
sitetm/: asgi.py  settings.py  urls.py  wsgi.py
sitetm/static/: style.css
sitetm/static/css/: colors.css  colors2.css
sitetm/static/css/components/: bs-filestyle.css
sitetm/static/css/imports/: header.css  pagetitle.css  sliders.css
sitetm/static/css/imports/shortcodes/: carousel.css  feature-box.css
sitetm/static/demos/seo/: seo.css
sitetm/static/demos/seo/images/: index2.ai
sitetm/static/js/: plugins.countdown.js
sitetm/static/js/components/: moment.js
templates/: 403.html  404.html  analise_empresa.html  base.html  construcao.html  contato copy.html  contato.html  criativos.html  desenvolvimento_web.html  faqs.html  gestao_trafego.html  google_meunegocio.html  identidade_visual.html  index.html  otimizacao_seo.html  politica_privacidade.html  posts.html  search.html  sobre copy.html  sobre.html  termos_uso.html
templates/partials/: footer.html  gdpr.html  javascripts.html  menu.html  mini-contato-2versao.html  mini-contato.html  promo-contato.html  servicos-outros.html  slider.html  testemunhos.html
